--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/willf668/inc-view#readme",
   "dependencies": {
+    "cross-storage": "^1.0.0",
     "ws": "^7.4.6"
   }
 }
