--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "cross-storage": "^1.0.0",
     "fs": "0.0.1-security",
+    "live-server": "^1.2.1",
+    "open": "^8.2.0",
     "uuid": "^8.3.2",
     "ws": "^7.4.6"
   }
