--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "live-server": "^1.2.1",
+    "nodemailer": "^6.6.1",
     "open": "^8.2.0",
     "uuid": "^8.3.2",
     "ws": "^7.4.6"
