--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.6.1",
     "open": "^8.2.0",
     "uuid": "^8.3.2",
-    "ws": "^7.4.6"
+    "ws": "^7.4.6",
+    "wss": "^3.3.4"
   }
 }
