--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cross-storage": "^1.0.0",
     "fs": "0.0.1-security",
+    "greenlock-express": "^4.0.3",
     "http": "0.0.1-security",
     "live-server": "^1.2.1",
     "mumble-client": "^1.3.0",
